--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.73.6",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-swipeable": "^0.6.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1"
   },
