feat: Made emptyState component reusable
Adjusted the emptyState component to make it reusable with other screens. This change enhances code modularity and improves reusability across the application.

--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-swipeable": "^0.6.0",
     "react-redux": "^9.1.0",
-    "redux": "^5.0.1",
-    "react-native-reanimated": "~3.6.2"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
