--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-swipeable": "^0.6.0",
     "react-redux": "^9.1.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "expo-av": "~13.10.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
