--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@reduxjs/toolkit": "^2.2.2",
-    "expo": "~50.0.14",
+    "expo": "^50.0.14",
+    "expo-av": "^13.10.5",
     "expo-font": "~11.10.3",
-    "expo-splash-screen": "~0.26.4",
+    "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
@@ -24,8 +25,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-swipeable": "^0.6.0",
     "react-redux": "^9.1.0",
-    "redux": "^5.0.1",
-    "expo-av": "~13.10.5"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
