refactor: encapsulated save timer handler in timerModal component for better code maintanability

--- a/app.json
+++ b/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.mavknight21.MultiChronoz"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "6a2bb1d4-cfd3-4923-bede-69d727856c47"
+      }
     }
   }
 }
