--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@reduxjs/toolkit": "^2.2.2",
+    "@types/react": "^18.3.1",
     "expo": "~50.0.14",
     "expo-av": "~13.10.5",
     "expo-font": "~11.10.3",
@@ -27,7 +28,8 @@
     "react-native-swipeable": "^0.6.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
